# memgrid

./: .gitignore  AllocManager.c  AllocManager.h  AllocManagerImpl.h  CMakeLists.txt  README.md
Source/: AllocManager.c  AllocManagerImpl.h  BinIndex.h  GridManager.h
Tests/: TestAllocManager.c
